# rb3e-stagekit-networked

./: .gitignore  CMakeLists.txt  README.md  TESTING.md  circuitpython_stagekit.py  dashboard.py  dashboard.spec  diagnose_network.py  manager.html  pico_stagekit  rb3e_index.html  settings.toml.example  simple_stagekit_dashboard.py  test_manual_telemetry.py  test_pico_direct.py  test_telemetry.py  tusb_config.h
.github/workflows/: build-firmware.yml  build.yml
Dashboard/: dashboard.py  dashboard.spec  download_mpv.py  requirements.txt
HomeAssistant/: rb3e_lighting.yaml
Stagekit/: code.py
firmware/: CMakeLists.txt  pico_sdk_import.cmake
firmware/examples/: USB_360StageKit.cpp
firmware/src/: ap_server.c  ap_server.h  config_parser.c  config_parser.h  dhcpserver.c  dhcpserver.h  littlefs_hal.c  littlefs_hal.h  lwipopts.h  main.c  network.c  network.h  rb3e_protocol.h  tusb_config.h  usb_host.c  usb_host.h
firmware/tools/: generate_config_uf2.py  requirements.txt
